# fagramm

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
doc/: the-spark.md
include/: fagramm.h
msvs/: fagramm.sln  fagramm.vcxproj  fagramm.vcxproj.filters  main.cpp  nowarns.h
src/: fagramm.cpp
